tests/profile/error/property/missing_name.profile
{
  "version": { "major": 1, "minor": 0 },
  "properties": [
    {
      "type": "setPropertyValue",
      "value": "v"
    }
  ]
}
